--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Café Florette | Accueil</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <header class="bg-black d-flex">
+       <h1 class="color-white
+">CAFE FLORETTE</h1>
+        <nav>
+            <ul>
+                <li><a href="/" class="color-white">Accueil</a></li>
+                <li><a href="" class="color-white">Nous trouver</a></li>
+                <li><a href="" class="color-white">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
 
+    </main>
+<footer></footer>
 </body>
 </html>
