Mise en place du footer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <main>
 
     </main>
-<footer></footer>
+<footer class="bg-black color-white">
+    Copyright -  Café Florette
+</footer>
 </body>
 </html>
