Mise en place de la première section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         </nav>
     </header>
     <main>
+        <section class="first-section color-white">
+            <h2>Toute l'expertise <br> fancaise dans un café</h2>
+            <div class="bar"></div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit .
+            </p>
+            <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit .
+        </p>
 
+            <a href="#">Decouvrir</a>
+        </section>
+        <section></section>
+        <section></section>
     </main>
 <footer class="bg-black color-white">
     Copyright -  Café Florette
